Bug 407422 - Invalid online statement balance shown
Summary: Invalid online statement balance shown
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 5.0.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-11 10:21 UTC by Thomas Baumgart
Modified: 2019-05-11 10:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-05-11 10:21:22 UTC
SUMMARY
In case a statement file (e.g. CSV) without staement balance information is imported into a reconciled account, a wrong online statement balance is shown.

STEPS TO REPRODUCE
1. Reconcile all transactions in an account
2. Import a statement via CSV with new transactions
3. 

OBSERVED RESULT
A wrong online statement balance is shown and the user is warned by showing this in red (or the resp selected color chosen by the user for this purpose).

EXPECTED RESULT
No online statement balance should be shown since it was not included in the statement
Comment 1 Thomas Baumgart 2019-05-11 10:29:36 UTC
Git commit c9225875b9839947b6c98ecea82132cb064b70e1 by Thomas Baumgart.
Committed on 11/05/2019 at 10:29.
Pushed by tbaumgart into branch '5.0'.

Don't show false online statement balance

In case there is no online statement balance available in the statement
import, don't show false information in the ledger
FIXED-IN: 5.0.5

M  +2    -0    kmymoney/converter/mymoneystatementreader.cpp

https://commits.kde.org/kmymoney/c9225875b9839947b6c98ecea82132cb064b70e1