Don't show false online statement balance

In case there is no online statement balance available in the statement
import, don't show false information in the ledger

BUG: 407422
FIXED-IN: 5.0.5